# discrete_opt

./: .gitignore
backpack/: CMakeLists.txt  README.md  run
backpack/src/: greedy.cpp
coloring/: CMakeLists.txt  README.md  run
coloring/src/: greedy.cpp
facility/: CMakeLists.txt  README.md  run
facility/src/: greedy.cpp
set_cover/: CMakeLists.txt  README.md  build  greedy.cpp  run  set_cover  set_cover.cpp
set_cover/src/: greedy.cpp
tsp/: CMakeLists.txt  README.md  run
tsp/src/: greedy.cpp
vrp/: CMakeLists.txt  README.md  run
vrp/src/: greedy.cpp
